add test for ServerEventHandler