@@ -41,14 +41,27 @@ subprojects {
 
         testImplementation 'junit:junit:4.12'
     }
+
+    tasks.withType(Test) {
+        useJUnitPlatform()
+        jvmArgs '--enable-preview'
+    }
 }
 
 project('app') {
 
     dependencies {
+        implementation project(':ws:ws-impl')
+
+
         implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
 
-        testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
+    }
+
+    jar {
+        manifest {
+            attributes 'Main-Class': "ge.devel.ocpp.SpringOcpp16JApplication"
+        }
     }
 }
 
@@ -72,9 +85,12 @@ project('ws:ws-impl') {
 
         implementation "org.springframework:spring-context:${springVersion}"
 
+        implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+
         implementation group: 'eu.chargetime.ocpp', name: 'common', version: '1.0'
         implementation group: 'eu.chargetime.ocpp', name: 'v1_6', version: '1.0.1'
         implementation group: 'eu.chargetime.ocpp', name: 'OCPP-J', version: '1.0.1'
 
+        testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
     }
 }
